* UTIL develop - add multiple script in specific for downloading PAN-OS software
* UTIL develop | introduce API creation testing script for different objects
* UTIL develop | introduce reset-config and software-remove script
* UTIL develop | software-downloader.php improve exception support

BUGFIX:
* UTIL pan-os-php API - bugfix in relation to shadow-json and previous code reduction

GENERAL:
* Dockerfiles - extend to different PHP versions
* App-ID version: 8497-7093 update
* framework examples | update 'example-panapiconnector.php'


2.0.25 (20211203)
UTILS:
* PAN-OS-PHP API - bugfix for PHP8.1
* all edit script with method PAN-OS API - introduce sending audit-comment information - default setting "PAN-OS-PHP $UTILtype $timedate"
* pa_rule-edit | 'actions=exportToExcel:FILE.html,ResolveAddressSummary|ResolveserviceSummary|ResolveApplicationsummary' - improve resolveservicesummary, if application-default is used in service and app-id has specified apps
* pa_zone-edit | introduce actions=name-rename:NewZoneNAME
* UTIL all script | introduce new argument "auditComment=XYZ" to bring in your custom auditComment
* UTIL all script - remove duplicate header / footer
* UTIL all script - optimise to always use single method entry from PAN-OS-PHP

BUGFIX:
* UTIL script download predefined PAN-OS content data - bugfix/workaround if PAN-OS API bring in double <response><return
* pa_tag-edit | actions=created:NewTag - bugfix to not error out on PAN-OS API - first check if NewTag is already availalble
* framework class App | bugfix as FawkesConf has no appstore at shared level / has no SHARED level
* UTIL pa_rule-edit | actions=display,ResolveServiceSummary bringing back consistent output for port and application-default app-id port
* class PanAPIConnector - bugfix if connection timeout

GENERAL:
* framework - content id update to version 8494-7079
* class PanAPIConnector - extend AuditComment usage to all kind of manipulation API request set/rename/delete/edit