@@ -15,6 +15,7 @@ UTILS:
 
 BUGFIX:
 * UTIL pan-os-php API - bugfix in relation to shadow-json and previous code reduction
+* UTIL pa_key-manager | bugfix to add host like license-apikey/bpa-apikey/ldap-password/maxmind-licensekey only once and delete previous available key
 
 GENERAL:
 * Dockerfiles - extend to different PHP versions
